update category and finish skill for job